--- a/client/src/data/locales/en-US.json
+++ b/client/src/data/locales/en-US.json
@@ -6,12 +6,14 @@
   "navigation.maps": "MAPS",
   "navigation.database": "LICENSE DATABASE",
   "navigation.resources": "LICENSE RESOURCES",
+  "navigation.notFound": "Page Not Found",
   "hero.heading": "Navigating the Liquor License system in Boston is hard.{br}We are here to make it just a little bit easier.",
   "hero.photoCredit": "Photo by {photographerLink} on {platformLink}",
   "aboutUs.title": "Who We Are:",
   "aboutUs.weAre": "We are a collection of restaurant owners, bartenders, chefs, and patrons; <b>Just Like You.</b> We understand how hard it is to navigate the red tape of liquor licenses in Boston. From tracking availability to the potential unwritten costs of obtaining one. We've made it our mission to demystify the process to help you get your business off the ground.",
   "home.quote": "...working to create a more equitable restaurant ecosystem for all...",
-  "database.header.title": "License Database",
+  "notFound.heading": "This page isn't on tap at the moment,",
+  "notFound.message": "The page you are looking for doesn't exist or has been moved, make sure you entered the right URL.",  "database.header.title": "License Database",
   "database.header.description": "Browse through available licenses in each of Boston's zip codes, view recent license applications as well as important information regarding each license type and important dates for license applications.",
   "database.header.nextMeeting": "The next Licensing Boarding meeting is: <strong>{nextMeetingDate, date, long}</strong>",
   "database-page.license-type.header2": "What does each type of license mean?",
