--- a/client/src/data/locales/en-US.json
+++ b/client/src/data/locales/en-US.json
@@ -10,6 +10,7 @@
   "hero.photoCredit": "Photo by {photographerLink} on {platformLink}",
   "aboutUs.title": "Who We Are:",
   "aboutUs.weAre": "We are a collection of restaurant owners, bartenders, chefs, and patrons; <b>Just Like You</b>. We understand how hard it is navigating the red tape of liquor licenses in Boston especially for your first time.{br}From tracking availability, understanding the application process, to the potential hidden costs of obtaining one. There is a lot to keep track of. We’ve made it our mission to demystify the process, and help you get your business off the ground as painlessly as possible.",
+  "home.quote": "...working to create a more equitable restaurant ecosystem for all...",
   "database.header.title": "License Database",
   "database.header.description": "Browse through available licenses in each of Boston's zip codes, view recent license applications as well as important information regarding each license type and important dates for license applications.",
   "database.header.nextMeeting": "The next Licensing Boarding meeting is: <strong>{nextMeetingDate, date, long}</strong>",
@@ -32,6 +33,44 @@
   "notFound.heading": "This page isn't on tap at the moment",
   "notFound.message": "The page you are looking for doesn't exist or has moved, make sure you have entered the right URL",
   "ui.backToHomeButton": "BACK TO HOME",
-  "home.quote": "...working to create a more equitable restaurant ecosystem for all...",
-  "home.extra-work.h2": "Check out more of our work!"
+  "footer.license": "LICENSE",
+  "footer.toSucceed": "TO SUCCEED",
+  "footer.disclaimerTitle": "Disclaimer:",
+  "footer.disclaimerText": "The information provided on this website is for general informational purposes only. The data represented on this site is not guaranteed to be accurate or complete. Information may change without notice.",
+  "footer.builtBy": "Built by Code for Boston for Offsite Hospitality",
+  "footer.copyright": "©, OFFSITE LLC All Rights Reserved",
+  "footer.siteMap": "Site Map",
+  "footer.homepage": "Homepage",
+  "footer.map": "Map",
+  "footer.database": "Database",
+  "footer.resources": "Important Resources",
+  "footer.importantLinks": "Important Links",
+  "footer.bostonBoard": "Boston Licensing Board",
+  "footer.abcc": "Alcoholic Beverages Control Commission",
+  "footer.application": "Boston License Application",
+  "footer.analyzeBoston": "Analyze Boston",
+  "footer.moreFromUs": "More From Us",
+  "footer.offsite": "Offsite Hospitality",
+  "footer.bootcamp": "Bar Management Bootcamp",
+  "footer.codeForBoston": "Code for Boston",
+  "footer.license": "LICENSE",
+  "footer.toSucceed": "TO SUCCEED",
+  "footer.disclaimerTitle": "Disclaimer:",
+  "footer.disclaimerText": "The information provided on this website is for general informational purposes only. The data represented on this site is not guaranteed to be accurate or complete. Information may change without notice.",
+  "footer.builtBy": "Built by Code for Boston for Offsite Hospitality",
+  "footer.copyright": "©, OFFSITE LLC All Rights Reserved",
+  "footer.siteMap": "Site Map",
+  "footer.homepage": "Homepage",
+  "footer.map": "Map",
+  "footer.database": "Database",
+  "footer.resources": "Important Resources",
+  "footer.importantLinks": "Important Links",
+  "footer.bostonBoard": "Boston Licensing Board",
+  "footer.abcc": "Alcoholic Beverages Control Commission",
+  "footer.application": "Boston License Application",
+  "footer.analyzeBoston": "Analyze Boston",
+  "footer.moreFromUs": "More From Us",
+  "footer.offsite": "Offsite Hospitality",
+  "footer.bootcamp": "Bar Management Bootcamp",
+  "footer.codeForBoston": "Code for Boston"
 }
