--- a/client/src/data/locales/en-US.json
+++ b/client/src/data/locales/en-US.json
@@ -3,11 +3,14 @@
   "header.database": "LICENSE DATABASE",
   "header.resources": "LICENSING RESOURCES",
   "header.home": "HOME",
+  "header.logo": "Logo",
+  "header.language": "Language",
   "navigation.maps": "MAPS",
   "navigation.database": "LICENSE DATABASE",
   "navigation.resources": "LICENSE RESOURCES",
   "hero.heading": "Boston’s Liquor License system can be confusing. We’re here to help you navigate it and ensure your business can succeed.",
   "hero.photoCredit": "Photo by {photographerLink} on {platformLink}",
+  "hero.title": "Upscale bar with old-school industrial bulbs as a decoration",
   "aboutUs.title": "Who We Are:",
   "aboutUs.weAre": "We are a collection of restaurant owners, bartenders, chefs, and patrons; <b>Just Like You</b>. We understand how hard it is navigating the red tape of liquor licenses in Boston especially for your first time.{br}From tracking availability, understanding the application process, to the potential hidden costs of obtaining one. There is a lot to keep track of. We’ve made it our mission to demystify the process, and help you get your business off the ground as painlessly as possible.",
   "home.quote": "...working to create a more equitable restaurant ecosystem for all...",
@@ -31,8 +34,12 @@
   "caseStudy.par3": "With this site we are working to create a more equitable restaurant ecosystem for all, and allow you to track and understand what Licenses are available to you.",
   "caseStudy.image.alt": "Medium-sized empty white square",
   "caseStudy.button.read": "READ THE FULL CASE STUDY",
+  "extra-work.offsite": "Off Site Logo, simple Logo type in bold Sans Serif Font",
+  "extra-work.bar-management-bootcamp": "Several students sitting around a bar listening to a boot camp presenter",
+  "extra-work.code-for-boston": "Code for Boston Logo, a geometric lantern with code brackets instead of a light with \"Code for Boston\" in text next to it",
   "notFound.heading": "This page isn't on tap at the moment",
   "notFound.message": "The page you are looking for doesn't exist or has moved, make sure you have entered the right URL",
+  "notFound.beerPourImageAlt": "Bartender pouring a beer from a tap",
   "ui.backToHomeButton": "BACK TO HOME",
   "footer.disclaimerTitle": "Disclaimer:",
   "footer.disclaimerText": "The information provided on this website is for general informational purposes only. The data represented on this site is not guaranteed to be accurate or complete. Information may change without notice.",
@@ -53,23 +60,5 @@
   "footer.bootcamp": "Bar Management Bootcamp",
   "footer.codeForBoston": "Code for Boston",
   "footer.license": "LICENSE",
-  "footer.toSucceed": "TO SUCCEED",
-  "footer.disclaimerTitle": "Disclaimer:",
-  "footer.disclaimerText": "The information provided on this website is for general informational purposes only. The data represented on this site is not guaranteed to be accurate or complete. Information may change without notice.",
-  "footer.builtBy": "Built by Code for Boston for Offsite Hospitality",
-  "footer.copyright": "©, OFFSITE LLC All Rights Reserved",
-  "footer.siteMap": "Site Map",
-  "footer.homepage": "Homepage",
-  "footer.map": "Map",
-  "footer.database": "Database",
-  "footer.resources": "Important Resources",
-  "footer.importantLinks": "Important Links",
-  "footer.bostonBoard": "Boston Licensing Board",
-  "footer.abcc": "Alcoholic Beverages Control Commission",
-  "footer.application": "Boston License Application",
-  "footer.analyzeBoston": "Analyze Boston",
-  "footer.moreFromUs": "More From Us",
-  "footer.offsite": "Offsite Hospitality",
-  "footer.bootcamp": "Bar Management Bootcamp",
-  "footer.codeForBoston": "Code for Boston"
+  "footer.toSucceed": "TO SUCCEED"
 }
