Add translatable alt text to images

--- a/client/src/data/locales/en-US.json
+++ b/client/src/data/locales/en-US.json
@@ -43,6 +43,7 @@
   "ui.backToHomeButton": "BACK TO HOME",
   "comingSoon.title": "Pardon Our Dust!",
   "comingSoon.description": "We are currently working hard to get this page finished to best fit your needs. Check back soon for exciting things!",
+  "comingSoon.backgroundImageAlt": "Rack of wine glasses hanging waiting to be used",
   "footer.disclaimerTitle": "Disclaimer:",
   "footer.disclaimerText": "The information provided on this website is for general informational purposes only. The data represented on this site is not guaranteed to be accurate or complete. Information may change without notice.",
   "footer.builtBy": "Built by Code for Boston for Offsite Hospitality",
